
Version 0.46.0
xx-Mar-2012

- added UUID configuration parameter for choosing method to generate UUID
- fixed a bug ignoring lost+found directories
- added support for .srt subtitle files (SubRip or application/x-subrip) for Samsung TV
- improvements to DirectoryListings (interpreting some of the filters)
- PROGRAM_BETA to CONFIG hash and print_version() to PDLNA::Config module

Version 0.45.0
19-Jan-2012

- thumbnails for external content are disabled
- added AllowPlaylists configuration parameter for Directory configuration block
- added support for Playlists (audio/x-scpls and audio/x-mpegurl) with local files
- added LogFileMaxSize configuration parameter for rotating the logfile
- fixed a bug (Device.pm line 139) regarding missing response content
- fixed a bug regarding the validation of the CacheControl configuration parameter
- added support for logging to syslog (SYSLOG option of LogFile configuration parameter)
- added configuration parameter DateFormat to define date format in logging, debug output and library
- changes to PDLNA::Library.pm HTML code

Version 0.44.1
11-Jan-2012

- improved and fixed some bugs in the installation script
- fixed a bug in ContentItem.pm: parent_id() function return {PARENT_ID} value instead of {DATE} value
- fixed a similar bug in ContentDirectory.pm regarding the parent_id() function
- added history for DirectoryListings to PDLNA::Device object
- fixed a problem regarding the different duration notations of audio and video files
- added support for audio mime-types: audio/x-flac
- fixed 'Upper Folder' problem with Samsung TV (handling @parentID filter value in XML request)
- small bugfixes regarding external media items (merged https://github.com/jjYBdx4IL/pDLNA/commit/557c692480fc3dfeb6f20d56997e6d41712c4136 by jjYBdx4IL)
- small changes in documentation regarding external media items (merged https://github.com/jjYBdx4IL/pDLNA/commit/75220bec5e05fcd83664a92cd9a0a45612862988 by jjYBdx4IL)