@@ -34,6 +34,7 @@ PIDFile			/var/run/pdlna.pid
 # if none is specified, no client will be able to communicate with the server
 # They can be specified in the following formats: 192.168.1.1/24, 192.168.1.1/255.255.255.0 or 192.168.1.1
 # Multiples can be seperated by commas
+# if not specified, the local subnet will be configured
 AllowedClients  192.168.1.1
 
 # BufferSize
@@ -127,8 +128,8 @@ LogCategory		discovery,httpdir,httpstream,library,httpgeneric
 # EnableImageThumbnails
 # specify if thumbnails of images in the ContentDirectory should be
 # created and delivered to capable devices
-# disabling this feature will result in faster directory listings
-# if none is specified, it will be set to 1
+# enabling this feature will result in slower directory listings
+# if none is specified, it will be set to 0
 #EnableImageThumbnails	On
 
 # EnableVideoThumbnails
@@ -136,7 +137,7 @@ LogCategory		discovery,httpdir,httpstream,library,httpgeneric
 # created and delivered to capable devices
 # enabling this feature will result in slower directory listings
 # if none is specified, it will be set to 0
-#EnableVideoThumbnails	Off
+#EnableVideoThumbnails	On
 
 # MPlayerBinaryPath
 # specify the path to the MPlayer binary
